--- a/package.json
+++ b/package.json
@@ -9,20 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^1.0.0",
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@types/validator": "^13.7.17",
     "autoprefixer": "10.4.14",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "mongodb": "^5.7.0",
-    "mongoose": "^7.4.0",
+    "mongoose": "^7.4.1",
     "next": "13.4.10",
+    "next-auth": "^4.22.3",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "validator": "^13.9.0"
   }
 }
